--- a/Activities/door_open_closed.ipynb
+++ b/Activities/door_open_closed.ipynb
@@ -68,7 +68,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -94,7 +96,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -111,7 +115,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -154,7 +160,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -199,7 +207,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -211,7 +221,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -231,7 +243,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -279,7 +293,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -291,7 +307,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -323,7 +341,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -337,7 +357,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -369,7 +391,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -417,7 +441,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -429,7 +455,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -458,7 +486,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -487,7 +517,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -526,7 +558,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -565,7 +599,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
