--- a/Assignments/probability_sampling.ipynb
+++ b/Assignments/probability_sampling.ipynb
@@ -69,7 +69,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -98,7 +100,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -114,7 +118,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -162,7 +168,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -208,7 +216,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -245,7 +255,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -270,7 +282,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -326,7 +340,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -376,7 +392,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -400,7 +418,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -415,7 +435,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -439,7 +461,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -453,7 +477,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -475,7 +501,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -488,7 +516,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -511,7 +541,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -526,7 +558,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -541,7 +575,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -586,7 +622,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -620,7 +658,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -638,7 +678,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -652,7 +694,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -689,7 +733,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -700,7 +746,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -766,7 +814,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -892,7 +942,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -907,7 +959,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -928,7 +982,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -939,7 +995,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -954,7 +1012,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
@@ -1024,7 +1084,9 @@
 "cell_type": "code",
 "execution_count": null,
 "metadata": {
-"tags": []
+"tags": [
+"otter_answer_cell"
+]
 },
 "outputs": [],
 "source": [
