Adding JN for path planning assginments

--- a/Assignments/check_exploring.ipynb
+++ b/Assignments/check_exploring.ipynb
@@ -11,7 +11,7 @@
 "source": [
 "# Initialize Otter\n",
 "import otter\n",
-"grader = otter.Notebook(\"check_dijkstra.ipynb\")"
+"grader = otter.Notebook(\"check_exploring.ipynb\")"
 ]
 },
 {
@@ -20,14 +20,16 @@
 "source": [
 "# Instructions\n",
 "\n",
-"This assignment implements Dijkstra's shortest path on a graph, finding an unvisited node in a graph, picking which one to visit, and taking a path in the map and generating waypoints along that path\n",
+"This assignment lets you both define a strategy for picking the next point to explore and determine how you want to chop up a full path into way points. You'll need **path_planning.py** and **exploring.py** as well (for calculating the paths)\n",
+"\n",
+"Note that there isn't a \"right\" answer for any of these. This is (mostly) a light-weight way to check your code for obvious problems before trying it in ROS. It's set up to make it easy to download a map and try some robot starting/ending points\n",
 "\n",
 "Given to you:\n",
-"- Priority queue\n",
 "- Image handling\n",
-"- Four and eight connected neighbors\n",
+"- plotting\n",
+"- Some structure for keeping/changing waypoints and converting to/from the map to the robot's coordinate space\n",
 "\n",
-"Slides: https://docs.google.com/presentation/d/1XBPw2B2Bac-LcXH5kYN4hQLLLl_AMIgoowlrmPpTinA/edit?usp=sharing\n"
+"Slides: https://docs.google.com/presentation/d/1tOUGoNDbzQeuzRwG-kJ-ipqDsCy3ABkIvNEdFmozRT8/edit?usp=sharing\n"
 ]
 },
 {
@@ -36,17 +38,9 @@
 "metadata": {},
 "outputs": [],
 "source": [
-"# The ever-present numpy\n",
+"# The ever-present numpy and matplot lib\n",
 "import numpy as np\n",
-"\n",
-"# Our priority queue\n",
-"import heapq\n",
-"\n",
-"# Using imageio to read in the image\n",
-"import imageio\n",
-"\n",
-"# Operating system commands\n",
-"import os\n"
+"import os"
 ]
 },
 {
@@ -67,7 +61,7 @@
 "editable": false
 },
 "source": [
-"# Run Dijkstra on a pretend SLAM map\n",
+"# Run exploring a SLAM map\n",
 "\n"
 ]
 },
@@ -81,16 +75,18 @@
 },
 "outputs": [],
 "source": [
-"if os.path.exists(\"path_planning.py\"):\n",
-"    from path_planning import dijkstra, plot_with_path, open_image, check_path_continuous\n",
-"else:\n",
+"try:\n",
+"    from path_planning import dijkstra, plot_with_path, open_image\n",
+"    from exploring import find_all_possible_goals, find_best_point, plot_with_explore_points, find_waypoints, test_unseen, test_best\n",
+"except:\n",
 "    cur_dir = os.getcwd()\n",
 "    if \"Assignments\" in cur_dir or \"Skills\" in cur_dir:\n",
 "        path_planning_dir = \"../ros_ws/src/lab3/lab3\"\n",
 "\n",
 "        os.chdir(path_planning_dir)\n",
-"        from path_planning import dijkstra, plot_with_path, open_image, check_path_continuous\n",
-"        os.chdir(cur_dir)"
+"        from path_planning import dijkstra, plot_with_path, open_image\n",
+"        from exploring import find_all_possible_goals, find_best_point, plot_with_explore_points, find_waypoints, test_unseen, test_best\n",
+"        os.chdir(cur_dir)\n"
 ]
 },
 {
@@ -103,23 +99,17 @@
 },
 "outputs": [],
 "source": [
-"# Opens and threshold the SLAM map image\n",
+"# You can use map or initial\n",
 "_, im_thresh = open_image(\"map.pgm\")\n",
 "\n",
-"# GUIDE:\n",
-"#.  Try the different start/goal locations. \n",
-"robot_start_loc = (40, 60)\n",
-"# Closer one to try - change this after it works...\n",
-"robot_goal_loc_close = (60, 80)\n",
-"robot_goal_hallway = (80, 175)\n",
-"robot_goal_next_room = (130, 50)\n",
+"# Split into two pieces - find all of the points that are adjacent to an unknown area and a visible area. The\n",
+"#. next question will pick the \"best\" one\n",
+"all_unseen = find_all_possible_goals(im_thresh)\n",
+"assert test_unseen(im_thresh, all_unseen)\n",
+"\n",
+"# Note: This can be a little slow (it's drawing a lot of little points)\n",
 "zoom = 1.0\n",
-"\n",
-"robot_goal_loc = robot_goal_loc_close\n",
-"path = dijkstra(im_thresh, robot_start_loc, robot_goal_loc)\n",
-"plot_with_path(im_thresh, zoom=zoom, robot_loc=robot_start_loc, goal_loc=robot_goal_loc, path=path)\n",
-"\n",
-"# NOTE: The path is correct if it is connected, doesn't loop back on itself, gets to the goal, and is \"snapped\" to the edges\n"
+"plot_with_explore_points(im_thresh, zoom=1.0, robot_loc=None, explore_points=all_unseen, best_pt=None)"
 ]
 },
 {
@@ -131,7 +121,7 @@
 },
 "outputs": [],
 "source": [
-"grader.check(\"dijkstra\")"
+"grader.check(\"unknown_area\")"
 ]
 },
 {
@@ -142,14 +132,8 @@
 ]
 },
 "source": [
-"## Reachability test\n",
-"\n",
-"Sometimes you'll put in a goal position that seems like it's free, but it's not actually reachable. This test checks that your code finds a reasonable path if the end goal is not reachable. This is the code that gets called when goal_loc is not visited:\n",
-"\n",
-"    if not goal_loc in visited:\n",
-"        print(f\"Goal {goal_loc} not reached, taking closest\")\n",
-"\n",
-"Note: This test will be SLOW"
+"## Find best\n",
+"No right naswer here, but going to test for a pixel that has at least 3 free neighbors"
 ]
 },
 {
@@ -162,9 +146,13 @@
 },
 "outputs": [],
 "source": [
-"loc_not_reachable = (115, 145)\n",
-"path_not_reachable = dijkstra(im_thresh, (40, 60), (115, 145))\n",
-"plot_with_path(im_thresh, zoom=0.75, robot_loc=robot_start_loc, goal_loc=loc_not_reachable, path=path_not_reachable)\n"
+"# Where the robot is might influence your choice. Shows path to selected point.\n",
+"robot_start_loc = (60, 40)\n",
+"best_unseen = find_best_point(im_thresh, all_unseen, robot_loc=robot_start_loc)\n",
+"assert test_best(im_thresh, best_unseen)\n",
+"\n",
+"path = dijkstra(im_thresh, robot_start_loc, best_unseen)\n",
+"plot_with_path(im_thresh, zoom=1.0, robot_loc=robot_start_loc, goal_loc=best_unseen, path=path)\n"
 ]
 },
 {
@@ -176,7 +164,46 @@
 },
 "outputs": [],
 "source": [
-"grader.check(\"end_point_not_valid\")"
+"grader.check(\"find_best\")"
+]
+},
+{
+"cell_type": "markdown",
+"metadata": {
+"deletable": false,
+"editable": false
+},
+"source": [
+"# Run waypoint generation on a pretend SLAM map\n",
+"Note: This code assumes you have the previous problem completed"
+]
+},
+{
+"cell_type": "code",
+"execution_count": null,
+"metadata": {
+"tags": [
+"otter_answer_cell"
+]
+},
+"outputs": [],
+"source": [
+"path = dijkstra(im_thresh, robot_start_loc, best_unseen)\n",
+"waypoints = find_waypoints(im_thresh, path)\n",
+"plot_with_path(im_thresh, zoom=1.0, robot_loc=robot_start_loc, goal_loc=best_unseen, path=waypoints)\n",
+"print(f\"Waypoints has {len(waypoints)} points of {len(path)}\")"
+]
+},
+{
+"cell_type": "code",
+"execution_count": null,
+"metadata": {
+"deletable": false,
+"editable": false
+},
+"outputs": [],
+"source": [
+"grader.check(\"Waypoints\")"
 ]
 },
 {
@@ -205,7 +232,7 @@
 "outputs": [],
 "source": [
 "\n",
-"# List of names (create\"s a set)\n",
+"# List of names (creates a set)\n",
 "worked_with_names = {\"not filled out\"}\n",
 "# List of URLS W26 (creates a set)\n",
 "websites = {\"not filled out\"}\n",
@@ -233,10 +260,9 @@
 "\n",
 "- Do a restart then run all to make sure everything runs ok\n",
 "- Save the file\n",
-"- Submit this .ipynb file and path_planning.py through gradescope, Dijkstra\n",
+"- Submit this .ipynb file and **path_planning.py** and **exploring.py** through gradescope, Lab 4: Explore\n",
 "- You do NOT need to submit the data files - we will supply those\n",
 "- Take out/suppress all print statements\n",
-"- Make sure your final image with path is visible - this is an entirely manually graded assignment\n",
 "\n",
 "If the Gradescope autograder fails, please check here first for common reasons for it to fail\n",
 "    https://docs.google.com/presentation/d/1tYa5oycUiG4YhXUq5vHvPOpWJ4k_xUPp2rUNIL7Q9RI/edit?usp=sharing\n",
@@ -245,7 +271,7 @@
 "\n",
 "Second most likely failure is because your code ran very, very slowly and the autograder timed out.\n",
 "\n",
-"Third reason for failure is you forgot to include **path_planning.py** and/or you put the file in a folder"
+"Third reason for failure is you forgot to include **path_planning.py** and **exploring.py** and/or you put the file(s) in a folder"
 ]
 }
 ],
@@ -265,29 +291,19 @@
 "name": "python",
 "nbconvert_exporter": "python",
 "pygments_lexer": "ipython3",
-"version": "3.12.4"
+"version": "3.11.7"
 },
 "otter": {
 "OK_FORMAT": true,
 "tests": {
-"dijkstra": {
-"name": "dijkstra",
-"points": 5,
+"Waypoints": {
+"name": "Waypoints",
+"points": 3,
 "suites": [
 {
 "cases": [
 {
-"code": ">>> path_straight = dijkstra(im_thresh, robot_loc=(40, 60), goal_loc=(60, 80))\n>>> assert check_path_continuous(im_thresh, path_straight, 41, 21)\n",
-"hidden": false,
-"locked": false
-},
-{
-"code": ">>> path_one_bend = dijkstra(im_thresh, robot_loc=(40, 60), goal_loc=(80, 175))\n>>> assert check_path_continuous(im_thresh, path_one_bend, 156, 116)\n",
-"hidden": false,
-"locked": false
-},
-{
-"code": ">>> path_next_room = dijkstra(im_thresh, robot_loc=(40, 60), goal_loc=(130, 50))\n>>> assert check_path_continuous(im_thresh, path_next_room, 315, 241)\n",
+"code": ">>> assert len(waypoints) < len(path)\n",
 "hidden": false,
 "locked": false
 }
@@ -299,14 +315,14 @@
 }
 ]
 },
-"end_point_not_valid": {
-"name": "end_point_not_valid",
-"points": 3,
+"find_best": {
+"name": "find_best",
+"points": 2,
 "suites": [
 {
 "cases": [
 {
-"code": ">>> path_not_reachable = dijkstra(im_thresh, robot_start_loc, (115, 145))\n>>> assert len(path_not_reachable) > 20\nGoal (115, 145) not reached, taking closest\n",
+"code": ">>> assert test_best(im_thresh, best_unseen)\n",
 "hidden": false,
 "locked": false
 }
@@ -336,6 +352,25 @@
 },
 {
 "code": ">>> assert hours > 0\n",
+"hidden": false,
+"locked": false
+}
+],
+"scored": true,
+"setup": "",
+"teardown": "",
+"type": "doctest"
+}
+]
+},
+"unknown_area": {
+"name": "unknown_area",
+"points": 5,
+"suites": [
+{
+"cases": [
+{
+"code": ">>> assert test_unseen(im_thresh, all_unseen)\n",
 "hidden": false,
 "locked": false
 }
